[gd_scene load_steps=16 format=2]

[ext_resource path="res://ScalingShader.gdshader" type="Shader" id=1]
[ext_resource path="res://Assets/Borders/Elements_Border_Right.png" type="Texture" id=2]
[ext_resource path="res://Assets/Borders/Elements_Border_top.png" type="Texture" id=3]
[ext_resource path="res://Assets/Borders/Elements_Border_Bottom.png" type="Texture" id=4]
[ext_resource path="res://Assets/Borders/Elements_Border_Left.png" type="Texture" id=5]
[ext_resource path="res://Assets/FRUSTAPAR_TITLE_3.png" type="Texture" id=6]
[ext_resource path="res://Assets/MainScreenFontTheme.tres" type="Theme" id=7]
[ext_resource path="res://Assets/BackgroundMountainSimple.png" type="Texture" id=8]
[ext_resource path="res://Scripts/LevelSelectButton.gd" type="Script" id=9]
[ext_resource path="res://Scripts/PlaySettings.gd" type="Script" id=10]
[ext_resource path="res://Scripts/StartGameSettings.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Click.tscn" type="PackedScene" id=13]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )

[node name="PlaySettings" type="Node2D"]
script = ExtResource( 10 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 11 )

[node name="Click" parent="Control" instance=ExtResource( 13 )]

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color( 0.968627, 0.988235, 0.654902, 1 )
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 643.0
margin_bottom = 481.0
texture = ExtResource( 8 )
expand = true

[node name="FrustaparTitle3" type="Sprite" parent="Control"]
material = SubResource( 4 )
position = Vector2( 317, 93 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Border" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 185.0
margin_top = 170.0
margin_right = 473.0
margin_bottom = 437.0
color = Color( 0.486275, 0.847059, 0.243137, 0.560784 )

[node name="ElementsBorderBottom" type="Sprite" parent="Control/Border"]
position = Vector2( 144, 273 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="ElementsBorderRight" type="Sprite" parent="Control/Border"]
material = SubResource( 3 )
position = Vector2( 294, 133.082 )
scale = Vector2( 1.5, 0.697488 )
texture = ExtResource( 2 )

[node name="ElementsBorderLeft" type="Sprite" parent="Control/Border"]
position = Vector2( -6, 133.477 )
scale = Vector2( 1.5, 0.695431 )
texture = ExtResource( 5 )

[node name="ElementsBorderTop" type="Sprite" parent="Control/Border"]
position = Vector2( 144, -6 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Border"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -115.5
margin_right = 140.0
margin_bottom = 115.5
size_flags_vertical = 2
size_flags_stretch_ratio = 1.16
theme = ExtResource( 7 )
custom_constants/separation = 26
alignment = 1

[node name="LevelSelect" type="Button" parent="Control/Border/VBoxContainer"]
margin_top = 51.0
margin_right = 280.0
margin_bottom = 102.0
text = "LEVEL"
script = ExtResource( 9 )

[node name="Click" parent="Control/Border/VBoxContainer/LevelSelect" instance=ExtResource( 13 )]

[node name="BackButton" type="Button" parent="Control/Border/VBoxContainer"]
margin_top = 128.0
margin_right = 280.0
margin_bottom = 179.0
text = "BACK"

[node name="Level" type="ColorRect" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 181.0
margin_top = 153.0
margin_right = 469.0
margin_bottom = 420.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 150, 150 )
color = Color( 0.486275, 0.847059, 0.243137, 0.560784 )

[node name="ElementsBorderBottom" type="Sprite" parent="Control/Level"]
position = Vector2( 144, 273 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="ElementsBorderRight" type="Sprite" parent="Control/Level"]
material = SubResource( 3 )
position = Vector2( 294, 133.082 )
scale = Vector2( 1.5, 0.697488 )
texture = ExtResource( 2 )

[node name="ElementsBorderLeft" type="Sprite" parent="Control/Level"]
position = Vector2( -6, 133.477 )
scale = Vector2( 1.5, 0.695431 )
texture = ExtResource( 5 )

[node name="ElementsBorderTop" type="Sprite" parent="Control/Level"]
position = Vector2( 144, -6 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Level"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -115.5
margin_right = 140.0
margin_bottom = 115.5
size_flags_vertical = 2
size_flags_stretch_ratio = 1.16
theme = ExtResource( 7 )
custom_constants/separation = 26
alignment = 1

[node name="SelectLevel" type="OptionButton" parent="Control/Level/VBoxContainer"]
margin_top = 51.0
margin_right = 280.0
margin_bottom = 102.0
theme = ExtResource( 7 )
text = "LEVEL 1"

[node name="PLAY" type="Button" parent="Control/Level/VBoxContainer"]
margin_top = 128.0
margin_right = 280.0
margin_bottom = 179.0
text = "PLAY"

[connection signal="button_up" from="Control/Border/VBoxContainer/LevelSelect" to="Control/Border/VBoxContainer/LevelSelect" method="_on_LevelSelect_button_up"]
[connection signal="button_up" from="Control/Border/VBoxContainer/BackButton" to="Control" method="_on_BackButton_button_up"]
[connection signal="item_selected" from="Control/Level/VBoxContainer/SelectLevel" to="." method="_on_SelectLevel_item_selected"]
[connection signal="button_up" from="Control/Level/VBoxContainer/PLAY" to="Control" method="_on_PLAY_button_up"]
